Fixed UI alignment changes

--- a/src/app/component/workitems/workitems.css
+++ b/src/app/component/workitems/workitems.css
@@ -1,6 +1,8 @@
 .container{
+  padding: 38px 36px 15px;
     background-color: #f5f5f9 !important;
 }
+
 
 .saved-msg {
   color: green;
@@ -50,8 +52,6 @@
   }
 }
 
-
-
 /* Navigation Bar */
 /* Navbar floating pill */
 .navbar {
@@ -91,8 +91,8 @@
 /* Page header pushed slightly down */
 .page-header {
   text-align: left;
-  margin: 30px auto 0px;
-  width: 90%;
+  /* margin: 30px auto 0px;
+  width: 90%; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -108,8 +108,8 @@
 /* Table Styles */
 .table-container {
   margin: 1rem auto;
-  width: 90%;
-  overflow-x: auto;
+  /* width: 90%; */
+  overflow-x: hidden;
   background: #fff;
   padding: 15px;
   border-radius: 8px;
@@ -126,8 +126,8 @@
   width: 250px;
   padding: 6px 10px;
   border: none;           
-  border-bottom: 2px solid #ccc; 
-  font-size: 17px;
+  border-bottom: 1px solid #ccc; 
+  font-size: 16px;
   outline: none;          
   transition: border-color 0.3s;
 }
@@ -286,8 +286,6 @@
   border-bottom: 1px solid #eee;
   text-align: left;
 }
-
-
 
 /* Scrollbar styling (optional) */
 .table-scroll-container::-webkit-scrollbar {
